--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </title>
 </head>
 <body>
-  <header></header>
+  <header>
+    Header
+  </header>
   <main></main>
   <footer></footer>
 </body>
